# elt_data4transformation

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPENDENCIES.md  Dockerfile.dbt  Makefile  README.md  check_clickhouse.py  check_table_status.py  debug_connector_auth.py  docker-compose.yml  environment.yml  exceptions.py  gesis_api  main.py  pyproject.toml  requirements.txt  simple_destatis_test.py  test_accessible_endpoints.py  test_auth_methods.py  test_catalogue_endpoint.py  test_correct_auth.py  test_cube_count.py  test_destatis_metadata.py  test_endpoints.py  test_final_count.py  test_header_auth.py  test_metadata_simple.py  test_token_auth.py  test_total_cubes.py
.cursor/: debug.mdc  directory-structure.mdc  error-documentation.mdc  formatting.mdc  implement.mdc  lessons-learned.mdc  memory.mdc  mr-review-changes.mdc  plan.mdc  rules.mdc
.github/: copilot-instructions.md
codex_docs/: ExecPlan_SOEP.md  eurostat_exec_plan.md
connectors/: base_connector.py  dawum_connector.py  destatis_connector.py  eurostat_connector.py  gesis_connector.py  soep_connector.py
dags/: dawum_ingest_dag.py  dbt_transform_dag.py  dbt_transformation_dag.py  destatis_extract_dag.py  extract_api_dag.py  extract_scrape_dag.py  fetch_destatis_metadata_clean.py  fetch_destatis_metadata_dag.py  fetch_destatis_metadata_dag_v2.py  fetch_destatis_metadata_optimized.py  fetch_eurostat_metadata_dag.py  fetch_gesis_metadata_dag.py  fetch_soep_metadata_dag.py  load_clickhouse_dag.py  topic_classifier_pipeline_dag.py  topic_selected_ingest_dag.py
dbt_project/: dbt_project.yml  profiles.yml
docs/: AIRFLOW_CREDENTIALS_SETUP.md  DESTATIS_DAG_DEPLOYMENT.md  DESTATIS_STATUS_TODOS.md  DESTATIS_TIMEOUT_SOLUTION.md  PRD.md  PRODUCTION_DEPLOYMENT.md  SOEP_CONNECTOR_STATUS.md  SYSTEM_STATUS.md  architecture.md  data_sources_implementation.md  destatis_connector.md  eurostat_connector.md  soep_connector.md  topic_classifier_storage.md  topic_ingestion_flow.md  topic_ingestion_runbook.md  topic_selection_assets.md
elt/: loader_clickhouse.py  metadata.py
pipeline/: __init__.py  __main__.py  dawum_local_load.py  topic_classifier.py  topic_selected_ingest.py
scraping/: settings.py
scripts/: airflow-entrypoint.sh  check_stack.ps1  check_stack.sh  init_clickhouse.sql  rotate-claude-token.ps1  safe_setup_destatis_table.py  setup_destatis_metadata_table.py  start_streamlit_local.ps1  test_live_connectors.py  validate_production_environment.py
sql/: create_dataset_topics_excluded_table.sql  create_dataset_topics_review_table.sql  create_dataset_topics_table.sql  create_datasets_unified_view.sql  create_dawum_polls_table.sql  create_destatis_metadata_table.sql  create_eurostat_metadata_table.sql  create_topic_classifier_runs_table.sql  create_topic_indicator_facts_table.sql  create_topic_selected_payloads_table.sql  dawum_polls_maintenance.sql  select_topic_dataset_catalog.sql
streamlit_app/: Home.py  config.py  services.py
study_scraper/: README.md  __init__.py  __main__.py  aggregate.py  attribute.py  auto_review.py  claims.py  cli.py  clustering.py  config.py  digest.py  docker-compose.yml  domain_audit.py  dossier.py  export.py  findings.py  follow.py  fulltext.py  http.py  ingest.py  models.py  pdf_resolver.py  pipeline.py  questions.py  status.py  topic_filter.py  topics.py
tests/: DESTATIS_PIPELINE_SUCCESS_REPORT.md  DESTATIS_PIPELINE_TEST_REPORT.md  conftest.py  test_api_manual.py  test_auth.py  test_clickhouse_connection.py  test_clickhouse_connection_fixed.py  test_connectivity.py  test_connectors.py  test_dawum_connector.py  test_guest.py  test_soep_connector.py  (+1 more)
(+194 files in other folders)
