[tool.poetry]
name = "bnb-data4transformation"
version = "0.1.0"
description = "Production-grade ELT pipeline for polling and socioeconomic data"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "connectors"}, {include = "elt"}, {include = "scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
pandas = "^2.2.0"
pydantic = "^2.5.0"
typer = "^0.9.0"

# Database & Storage
clickhouse-driver = "^0.2.6"
clickhouse-connect = "^0.7.0"
minio = "^7.2.0"
boto3 = "^1.34.0"

# API Clients
requests = "^2.31.0"
httpx = "^0.26.0"

# Data Processing
pyarrow = "^15.0.0"
polars = "^0.20.0"
pydantic-settings = "^2.1.0"

# Airflow
apache-airflow = "^2.9.1"
apache-airflow-providers-postgres = "^5.10.0"
apache-airflow-providers-http = "^4.10.0"

# Web Scraping
scrapy = "^2.11.0"
beautifulsoup4 = "^4.12.0"
selenium = "^4.17.0"

# Monitoring & Logging
prometheus-client = "^0.19.0"
structlog = "^23.2.0"

# Utilities
python-dotenv = "^1.0.0"
invoke = "^2.2.0"
rich = "^13.7.0"

# Retry and resilience
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
testcontainers = "^3.7.0"

# Code Quality
black = "^24.1.0"
ruff = "^0.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

# dbt
dbt-core = "^1.7.0"
dbt-clickhouse = "^1.7.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "clickhouse_driver.*",
    "clickhouse_connect.*",
    "minio.*",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=connectors",
    "--cov=elt",
    "--cov=scraping",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
